<resources>
    <string name="app_name">邻汇吧</string>
    <string name="app_name_debug">邻汇吧Beta</string>
    <string name="action_settings">Settings</string>
    <string name="txt_waiting">请稍候…</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="loading_text">正在加载……</string>
    <string name="dialog_prompt">提示</string>
    <string name="delete_prompt">确定删除?</string>
    <string name="response_success">成功</string>
    <string name="txt_phonenumber_newhint_text">请输入手机号</string>
    <string name="txt_phonenumber_hint">请输入手机号码</string>
    <string name="txt_correctphonenumber_hint">请输入有效手机号码</string>
    <string name="txt_code_hint">请输入验证码</string>
    <string name="txt_password_hint">请输入密码</string>
    <string name="txt_password_lenthhint">请输入6-30位密码</string>
    <string name="txt_confirm_pw_hint">请确认密码</string>
    <string name="txt_confirm_yqm_hint">请输入邀请码(选填)</string>
    <string name="txt_confirm_possword_remind">两次密码输入不一致</string>
    <string name="txt_register_btn_txt">注册</string>
    <string name="txt_register_codebtn_txt">获取验证码</string>
    <string name="txt_register_codebtn_error_txt">验证码错误</string>
    <string name="txt_register_remind_codebtn_txt">请输入正确验证码</string>
    <string name="txt_register_send_codeb_remind">已提交请求</string>
    <string name="txt_register_send_codeb_error_remind">发送失败，请稍后再试</string>
    <string name="txt_register_success_remind">注册成功！</string>
    <string name="txt_register_error_remind">注册失败，请稍后再试</string>
    <string name="module_register_success_msg">恭喜您，注册成功！</string>
    <string name="module_register_success_goto_home">去首页挑选场地</string>
    <string name="module_register_success_goto_demand">发布需求</string>
    <string name="module_register_success_goto_approve">申请企业认证</string>
    <string name="module_register_success_goto_add_res">发布场地</string>
    <string name="module_register_success_company">©2015-2020 杭州邻汇网络科技有限公司版权所有\n浙ICP备15014469号</string>
    <string name="module_register_find_password">点击找回</string>
    <string name="tab_txt_Home">首页</string>
    <string name="tab_txt_shopping">购物车</string>
    <string name="tab_txt_my">我的</string>
    <string name="tab_txt_custome">客服</string>
    <string name="tab_txt_invite">邀请有奖</string>
    <string name="tab_self_support_str">自营商城</string>
    <string name="tab_revise_fields_str">订场地</string>
    <string name="module_maintab_back_msg">再按一次返回键退出程序</string>
    <string name="login_btn_text">登录</string>
    <string name="module_reister_login">注册并登录</string>
    <string name="login_fastlogin_text">快速登录</string>
    <string name="login_btn_left_text">手机快捷登录或注册</string>
    <string name="login_btn_right_text">忘记密码？</string>
    <string name="login_no_account_text">请输入手机号码/用户名</string>
    <string name="login_login_error_text">登录失败，请稍后再试</string>
    <string name="login_integral_hinttext">重新登录，查看积分</string>
    <string name="login_account_hinttext">账号</string>
    <string name="login_password_hinttext">密码</string>
    <string name="login_password_other_login_way_text">第三方登录</string>
    <string name="login_weixin_login_error_text">微信授权失败</string>
    <string name="login_speedy_login_way_text">其他登录方式</string>
    <string name="login_weixin_login_way_text">微信登录</string>
    <string name="login_hello_tv_str">您好，</string>
    <string name="login_welcome_tv_str">欢迎来到邻汇吧！</string>
    <string name="login_account_login_tv_str">账号密码登录</string>
    <string name="module_login_plase_installed_qq">请先安装qq</string>
    <string name="leftimg_text">场地</string>
    <string name="righttimg_text">广告</string>
    <string name="home_demand_str">需求</string>
    <string name="left_text">热门场地</string>
    <string name="right_text">热门广告</string>
    <string name="search_hint_txt">请输入场地名称、位置等</string>
    <string name="area_name_txt">杭州</string>
    <string name="fieldarea_name_txt">杭州市</string>
    <string name="search_Sequence_type_txt">排序</string>
    <string name="search_sales_type_txt">销量</string>
    <string name="search_comprehensive_type_txt">推荐</string>
    <string name="search_types_type_txt">类型</string>
    <string name="search_area_type_txt">区域</string>
    <string name="search_price_type_txt">价格</string>
    <string name="honefragment_function">敬请期待</string>
    <string name="screening_txt">筛选</string>
    <string name="home_activity_item_timetxt">时间：</string>
    <string name="home_projecttxt">专题推荐</string>
    <string name="home_themes_share_title_txt">邻汇吧专题推荐</string>
    <string name="home_themes_share_description_txt">精心挑选、各具特色的高品质场地，让找场地更高效</string>
    <string name="invite_share_title_text">好友邀请你使用邻汇吧，领取100元现金奖励</string>
    <string name="invite_share_description_text">邻汇吧，快闪场地租赁平台，专注为品牌商的线下营销活动提供场地信息化、人群数据化服务。包括小区、商超、写字楼、园区、地铁、学校等15000+快闪场地在线租赁。目前业务覆盖北京、上海、广州、深圳、杭州、成都、天津等21个城市。</string>
    <string name="home_exclusive_show_btntext">立即查看</string>
    <string name="home_share_show_titel_text">2016年，我的地推之旅|邻汇吧地推报告</string>
    <string name="home_share_show_description_onetext">过去一年，我在邻汇吧共预订了</string>
    <string name="home_share_show_description_twotext">个订单，消费了</string>
    <string name="home_new_fields_title_text">新增场地</string>
    <string name="home_daily_sale_title_text">每日特卖</string>
    <string name="home_show_all_resources_title_text">查看全部</string>
    <string name="home_hot_activity_title_text">热门活动</string>
    <string name="home_adv_reserve_title_text">广告预订</string>
    <string name="home_cooperation_case_title_text">精彩案例</string>
    <string name="home_service_provider_title_text">优质服务商</string>
    <string name="home_recommend_title_text">为您推荐</string>
    <string name="home_bulletin_board_title_text">公告栏</string>
    <string name="home_wechat_printer_text">微信打印机</string>
    <string name="home_lift_title_text">电梯</string>
    <string name="home_lift_media_title_text">电梯横媒体</string>
    <string name="home_big_sign_title_text">大牌</string>
    <string name="home_news_title_text">邻汇动态</string>
    <string name="home_case_title_text">经典案例</string>
    <string name="home_review_remind_title_text">评价得积分</string>
    <string name="home_review_remind_btn_text">去评价</string>
    <string name="home_review_remindcheckbox_text">7天内不再提醒</string>
    <string name="home_dailysale_original_price_str">原价</string>
    <string name="home_tiele_search_defaultcity_str">杭州市</string>
    <string name="home_location_search_str">查地图</string>
    <string name="home_self_support_str">自营商城</string>
    <string name="home_demand_customization_str">需求定制</string>
    <string name="home_group_booking_str">拼团</string>
    <string name="home_recent_activity_str">近期活动</string>
    <string name="home_theme_title_str">精选专题</string>
    <string name="home_look_more_list_tv_str">查看更多</string>
    <string name="home_field_hot_type_title_str">热门分类</string>
    <string name="home_find_field_resource_tv_str">找场地</string>
    <string name="home_group_booking_tv_str">来抱团</string>
    <string name="home_today_reserve_tv_str">快速订</string>
    <string name="home_hot_reserve_tv_str">大家都在订</string>
    <string name="home_daily_sale_tv_str">下单我补贴</string>
    <string name="home_classic_case_tv_str">经典案例</string>
    <string name="home_price_unit_tv_str">   /  天起</string>
    <string name="home_subsidy_fee_tv_first_str">立减</string>
    <string name="home_hot_inquiry_tv_str">价格面议</string>
    <string name="home_design_and_build_str">设计搭建</string>
    <string name="home_part_time_service_str">兼职服务</string>
    <string name="home_material_transportation_str">物料运输</string>
    <string name="home_push_execution_str">地推执行</string>
    <string name="home_no_login_phone_str">登录后查看电话</string>
    <string name="module_home_order_size">销量：</string>
    <string name="module_home_show_map">查地图</string>
    <string name="module_home_show_adv_list">投广告</string>
    <string name="module_home_item_service_mobile">电话：</string>
    <string name="module_home_no_community_data_msg">该城市暂无</string>
    <string name="module_home_no_community_data_other_msg">场地，正在努力开垦中…</string>
    <string name="module_home_linhui_data">邻汇数据</string>
    <string name="module_home_linhui_data_rental_area">可供租赁面积(平方米）</string>
    <string name="module_home_linhui_data_cover_city">场地覆盖城市(个)</string>
    <string name="module_home_linhui_data_num_of_people">单日客流量(人)</string>
    <string name="module_home_linhui_data_num_of_res">发布场地资源</string>
    <string name="module_home_linhui_data_num_thousand_nuit">万</string>
    <string name="module_home_notification_open">去开启</string>
    <string name="module_home_another_time">下次再说</string>
    <string name="module_home_push_notification_title">开启推送通知</string>
    <string name="module_home_push_notification_description">随时了解场地/订单消息</string>
    <string name="module_home_service_provider_settled">我要入驻</string>
    <string name="btn_securitycode">获取验证码</string>
    <string name="btn_securitycode_reget">已发送</string>
    <string name="register_agree_text">我已阅读并同意</string>
    <string name="register_agreement_text">《邻汇吧用户注册协议》</string>
    <string name="register_agreement_title_text">注册协议</string>
    <string name="register_instance_tv">查看样例</string>
    <string name="register_enterprise_account_et_hint_str">请输入账号</string>
    <string name="register_password_hint">请输入密码(至少6位)</string>
    <string name="register_invite_code_hint">请输入推荐人的邀请码（选填）</string>
    <string name="register_check_enterprise_str">请核对企业信息</string>
    <string name="register_credit_code_str">信用代码：</string>
    <string name="register_enterprise_name_str">企业名称：</string>
    <string name="register_enterprise_representative_str">法人代表：</string>
    <string name="register_enterprise_area_str">所在省市：</string>
    <string name="register_enterprise_check_remind_str">信息如若有误，可</string>
    <string name="register_upload_str">重新上传</string>
    <string name="register_next_edit_account_str">下一步，填写账号信息</string>
    <string name="register_notice_str">完成企业注册，即可激活场地发布权限，更多企业服务敬请期待...</string>
    <string name="register_upload_instructions_first_str">1. 图片支持.jpg ／.png 格式，大小不得超过8M。\n2. 请确认营业执照完整性，信息清晰可见，内容真实有效；如遇问题，可咨询客服热线</string>
    <string name="register_check_remind_str">如遇问题，可拨打客服热线</string>
    <string name="myself_titletxt">我的</string>
    <string name="myselfinfo_titletxt">个人信息</string>
    <string name="myselfinfo_company_title_str">企业信息</string>
    <string name="myselfinfo_modify_pw">修改密码</string>
    <string name="myselfinfo_save_pw">保存</string>
    <string name="footprint_remark_sales_txt">销售额</string>
    <string name="footprint_remark_sales_hinttxt">请输入销售额</string>
    <string name="footprint_remark_focus_txt">新增关注</string>
    <string name="footprint_remark_focus_hinttxt">请输入新增关注量</string>
    <string name="pw_oldtext">请输入当前密码</string>
    <string name="pw_new_text">请输入新密码</string>
    <string name="pw_repeat_new_text">请确认新密码</string>
    <string name="module_mondify_pw_service_remind">若手机号无法接收信息，\n请联系客服</string>
    <string name="fieldinfo_no_parameter_message">-</string>
    <string name="review_people_number_text">现场人流量</string>
    <string name="confirmorder_account_pay_checkprompt">对公打款</string>
    <string name="confirmorder_pay_way">支付方式</string>
    <string name="confirmorder_weixin_paie">微信支付</string>
    <string name="confirmorder_alipay_paie">支付宝支付</string>
    <string name="confirmorder_offline_pay_prompttext">(线下支付，需上传转账证明)</string>
    <string name="btn_complete">完成</string>
    <string name="txt_findpassword">忘记密码？</string>
    <string name="mTxt_people_prompt">请输入人流量</string>
    <string name="mTxt_save_fieldinfo">保存</string>
    <string name="wallet_mywallet_recharge_price_text">金额</string>
    <string name="wallet_mywallet_recharge_price_hinttext">请输入需要充值金额</string>
    <string name="wallet_mywallet_recharge_price_btn_text">去充值</string>
    <string name="wallet_mywallet_recharge_price_success_remint_text">充值申请已提交，请等待入账</string>
    <string name="wallet_mywallet_recharge_money_text">充值金额</string>
</resources>