<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_linearlayout_bg">
    <include
        layout="@layout/linhui_business_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_linelayout_height"
        android:background="@color/top_title_line_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/app_linearlayoutrighttxt_style"
            android:text="@string/confirmorder_pay_way"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_linelayout_height"
        android:background="@color/app_samelinearlayout_bg">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:paddingLeft="@dimen/field_info_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/wallet_recharge_weixin_pay_checkbox"
            android:paddingLeft="@dimen/field_info_height"
            android:textColor="@color/top_title_center_txt_color"
            android:textSize="@dimen/fieldinfo_diogle_time_textsize"
            android:checked="true"
            android:text="@string/confirmorder_weixin_paie"
            style="@style/MyorderCheckBox" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:paddingLeft="@dimen/field_info_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/wallet_recharge_alipay_pay_checkbox"
            android:paddingLeft="@dimen/field_info_height"
            android:textColor="@color/top_title_center_txt_color"
            android:textSize="@dimen/fieldinfo_diogle_time_textsize"
            android:checked="false"
            android:text="@string/confirmorder_alipay_paie"
            style="@style/MyorderCheckBox" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:paddingLeft="@dimen/field_info_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_linelayout_height"
            android:background="@color/app_samelinearlayout_bg"
            android:layout_marginRight="@dimen/app_backbtn_marginleft"
            android:layout_alignParentTop="true">
        </View>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/wallet_recharge_account_pay_checkbox"
            android:paddingLeft="@dimen/field_info_height"
            android:textColor="@color/top_title_center_txt_color"
            android:textSize="@dimen/fieldinfo_diogle_time_textsize"
            android:checked="false"
            android:text="@string/confirmorder_account_pay_checkprompt"
            style="@style/MyorderCheckBox"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/addshoppingcard_width"
            android:textColor="@color/orderconfirm_success_bottom_btntextcolor"
            android:textSize="@dimen/txt_title_size_info"
            android:layout_marginRight="@dimen/app_backbtn_marginleft"
            android:text="@string/confirmorder_offline_pay_prompttext"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/title_bar_back_marginLeft"
        android:background="@color/white"
        android:paddingRight="@dimen/app_backbtn_marginleft"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/app_linearlayoutrighttxt_style"
            android:text="@string/wallet_mywallet_recharge_price_text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/app_linearlayoutrightedit_style"
            android:numeric="decimal"
            android:maxLength="12"
            android:hint="@string/wallet_mywallet_recharge_price_hinttext"
            android:id="@+id/mywallet_recharge_price_edit"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_layout_width_height"
        android:layout_marginTop="@dimen/order_type_layoutwidth"
        style="@style/appbottombtn_style"
        android:text="@string/wallet_mywallet_recharge_price_btn_text"
        android:id="@+id/mywallet_recharge_price_btn"/>

</LinearLayout>