<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_linearlayout_bg">
    <include
        layout="@layout/linhui_business_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_linelayout_height"
        android:background="@color/top_title_line_color"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_linelayout_height"
        android:background="@color/app_samelinearlayout_bg"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/fieldinfo_toleft_addshopcard"
        android:id="@+id/old_pw"
        android:background="@color/white"
        android:hint="@string/pw_oldtext"
        android:inputType="textPassword"
        android:singleLine="true"
        android:maxLength="30"
        android:text=""
        android:paddingLeft="@dimen/title_bar_back_marginBottom"
        android:textColor="@color/home_serach_typetxt"
        android:textColorHint="@color/field_chair_textcolor"
        android:textSize="@dimen/title_bar_title_txt_size"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_linelayout_height"
        android:background="@color/modify_pw_view_bg"
        android:layout_marginLeft="@dimen/title_bar_back_marginLeft"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/fieldinfo_toleft_addshopcard"
        android:id="@+id/new_pw"
        android:background="@color/white"
        android:singleLine="true"
        android:maxLength="30"
        android:hint="@string/pw_new_text"
        android:textColor="@color/home_serach_typetxt"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/title_bar_back_marginBottom"
        android:textColorHint="@color/field_chair_textcolor"
        android:textSize="@dimen/title_bar_title_txt_size"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_linelayout_height"
        android:background="@color/modify_pw_view_bg"
        android:layout_marginLeft="@dimen/title_bar_back_marginLeft"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/fieldinfo_toleft_addshopcard"
        android:id="@+id/repeat_new_pw"
        android:background="@color/white"
        android:singleLine="true"
        android:maxLength="30"
        android:hint="@string/pw_repeat_new_text"
        android:textColor="@color/home_serach_typetxt"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/title_bar_back_marginBottom"
        android:textColorHint="@color/field_chair_textcolor"
        android:textSize="@dimen/title_bar_title_txt_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:orientation="horizontal"
            android:paddingRight="@dimen/app_backbtn_marginleft">
            <TextView
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/app_backbtn_marginleft"
                android:layout_height="wrap_content"
                style="@style/DefaultLeftStyle"
                android:textColor="@color/register_edit_color"
                android:text="@string/txt_findpassword"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/app_backbtn_marginleft"
                style="@style/DefaultLeftStyle"
                android:textColor="@color/default_bluebg"
                android:id="@+id/modify_password_find_tv"
                android:text="@string/module_register_find_password"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/tab_item_margintop"
            style="@style/DefaultLeftStyle"
            android:textColor="@color/register_edit_color"
            android:text="@string/module_mondify_pw_service_remind"/>

    </LinearLayout>
</LinearLayout>