<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_linearlayout_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_linearlayout_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/linhui_business_title_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/title_bar_linelayout_height"
                android:background="@color/top_title_line_color"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:background="@color/white"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/app_linearlayoutrighttxt_style"
                    android:text="@string/review_people_number_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/app_linearlayoutrightedit_style"
                    android:hint="@string/mTxt_people_prompt"
                    android:maxLength="7"
                    android:numeric="integer"
                    android:id="@+id/remarks_numberofpeople"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/title_bar_linelayout_height"
                android:background="@color/new_viewbg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:background="@color/white"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/app_linearlayoutrighttxt_style"
                    android:text="@string/footprint_remark_sales_txt"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/app_linearlayoutrightedit_style"
                    android:hint="@string/footprint_remark_sales_hinttxt"
                    android:maxLength="7"
                    android:numeric="integer"
                    android:id="@+id/remarks_sales"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/title_bar_linelayout_height"
                android:background="@color/new_viewbg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:background="@color/white"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/app_linearlayoutrighttxt_style"
                    android:text="@string/footprint_remark_focus_txt"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/app_linearlayoutrightedit_style"
                    android:hint="@string/footprint_remark_focus_hinttxt"
                    android:maxLength="7"
                    android:numeric="integer"
                    android:id="@+id/remarks_focus"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/title_bar_linelayout_height"
                android:background="@color/new_viewbg"/>
            <com.linhuiba.business.fieldview.Field_MyGridView
                android:id="@+id/remarks_addpicture"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/userinfo_layout_margin"
                android:paddingTop="@dimen/userinfo_layout_margin"
                android:numColumns="3"
                android:scrollbars="none"
                android:verticalSpacing="@dimen/txt_padding_left"
                android:horizontalSpacing="@dimen/txt_padding_left"
                android:columnWidth="@dimen/field_list_item_img_height"
                android:gravity="center"
                android:paddingBottom="@dimen/app_backbtn_marginleft"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_Popular_marginleft"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/userinfo_layout_margin"
            android:text="@string/mTxt_save_fieldinfo"
            android:id="@+id/footprintremark_savebtn"
            style="@style/appbottombtn_style" />

    </RelativeLayout>


</LinearLayout>