<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_linearlayout_bg">
    <include
        layout="@layout/linhui_business_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/btn_login_height"
        android:src="@drawable/ic_pay_for_success"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tab_item_img_height"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/top_title_center_txt_color"
        android:textSize="@dimen/fieldinfo_diogle_time_textsize"
        android:text="@string/wallet_mywallet_recharge_price_success_remint_text"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/white"
        android:layout_marginTop="@dimen/order_type_layoutwidth">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/app_backbtn_marginleft"
            android:textSize="@dimen/txt_title_size_small"
            android:textColor="@color/top_title_center_txt_color"
            android:text="@string/confirmorder_pay_way"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/app_backbtn_marginleft"
            android:textSize="@dimen/txt_title_size_small"
            android:textColor="@color/orderconfirm_success_bottom_btntextcolor"
            android:text="@string/fieldinfo_no_parameter_message"
            android:id="@+id/wallet_recharge_success_payway_textview"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/white">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_padding_line"
            android:layout_marginLeft="@dimen/app_backbtn_marginleft"
            android:layout_marginRight="@dimen/app_backbtn_marginleft"
            android:layout_alignParentTop="true"
            android:background="@color/new_viewbg">
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/app_backbtn_marginleft"
            android:textSize="@dimen/txt_title_size_small"
            android:textColor="@color/top_title_center_txt_color"
            android:text="@string/wallet_mywallet_recharge_money_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/app_backbtn_marginleft"
            android:textSize="@dimen/txt_title_size_small"
            android:textColor="@color/orderconfirm_success_bottom_btntextcolor"
            android:text="@string/fieldinfo_no_parameter_message"
            android:id="@+id/wallet_recharge_success_price_textview"/>
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_layout_width_height"
        android:layout_marginTop="@dimen/order_type_layoutwidth"
        style="@style/appbottombtn_style"
        android:text="@string/btn_complete"
        android:id="@+id/mywallet_recharge_success_btn"/>

</LinearLayout>